--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ Tags: AgriBest,OPT
 
 @font-face {
   font-family: 'Circe Bold';
-  src: url("fonts/circe_bold.eot");
+  src: url("fonts/circe_bold.eot"); 
   /* IE 9 Compatibility Mode */
   src: url("fonts/circe_bold.eot?#iefix") format("embedded-opentype"), url("fonts/circe_bold.woff2") format("woff2"), url("fonts/circe_bold.woff") format("woff"), url("fonts/circe_bold.ttf") format("truetype"), url("fonts/circe_bold.svg#circe_bold") format("svg");
   /* Chrome < 4, Legacy iOS */ }
@@ -2506,6 +2506,54 @@ textarea
   font-size: 1.14rem;
   line-height: 1.5;
   margin-bottom: 76px; }
+
+
+.box-modal {
+    max-width: 450px;
+    width: 100%;
+    background-color: #f2f2f2;
+    padding: 45px 35px 30px 35px;
+    border-radius: 5px;
+    position: relative;
+    box-sizing: border-box;
+}
+.box-modal_close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    cursor: pointer;
+}
+.box-modal h3 {
+    font-size: 23px;
+    margin-bottom: 35px;
+}
+.SendetMsg {
+    padding: 10px 0;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 600;
+}
+#agriwind .reviews__form-input {
+    border: 1px solid #1dc17b;
+}
+.reviews__form-input {
+    height: 45px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    min-width: 0 !important;
+    box-sizing: border-box;
+}
+.box-modal button {
+    margin-top: 20px;
+    font-size: 10px;
+    width: 180px;
+    height: 40px;
+}
+
+
+
+
+
 
 @media screen and (max-width: 999px) {
   .banner .inner {
