Обновление товаров в скрипте, правка верстки

--- a/style.css
+++ b/style.css
@@ -1730,6 +1730,20 @@ button,
   height: auto;
 }
 
+.product__grid .tov_elem_img_wrapper {
+  width: 100%;
+  max-height: 288px;
+  min-height: 288px;
+  overflow: hidden;
+}
+
+.product__row .tov_elem_img_wrapper {
+  width: 90px;
+  max-height: 90px;
+  min-height: 90px;
+  overflow: hidden;
+}
+
 .clearfix::after,
 .clear::after {
   content: "";
@@ -2033,6 +2047,16 @@ textarea {
   min-width: 40px;
   background-color: #d1dae3;
 }
+
+.bascet_wrapper_head {
+  display: flex;
+  text-decoration: none;
+}
+
+.bascet_wrapper_head:hover {
+  text-decoration: none;
+}
+
 #header .header__top .store-btn-box .cart::before {
   content: "";
   position: absolute;
@@ -2912,6 +2936,7 @@ textarea {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+  margin-bottom: 20px;
 }
 
 .product__row {
@@ -3114,8 +3139,9 @@ textarea {
 .ul-clean {
   display: grid;
   grid-template-rows: auto;
-  grid-template-columns: repeat(8, 1fr);
-  grid-gap: 0.3em;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 2em;
+  width:100%;
 }
 .ul-clean li a {
   font-size: 16px;
@@ -3124,6 +3150,10 @@ textarea {
 .sub-menu li a {
   font-size: 14px;
   font-weight: 300;
+}
+
+ul.sub-menu {
+  margin-top: 10px;
 }
 
 @media screen and (max-width: 999px) {
@@ -3340,6 +3370,10 @@ textarea {
 @media screen and (max-width: 515px) {
   .ul-clean {
     grid-template-columns: repeat(1, 1fr);
+    text-align: right;
+  }
+  .store-menu__wr {
+    text-align: right;
   }
 }
 
