--- a/style.css
+++ b/style.css
@@ -2932,7 +2932,8 @@ textarea {
 .view {
   position: relative;
   top: 10px;
-  max-width: 83px;
+  /* max-width: 83px; */
+  max-width: 320px;
   width: 100%;
   display: flex;
   justify-content: flex-end;
@@ -2968,6 +2969,42 @@ textarea {
   grid-template-row: repeat(3, 1fr);
   grid-gap: 1px;
 }
+
+.view__select-block {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 220px;
+  width: 100%;
+  margin-right: 15px;
+}
+
+.view__select {
+  cursor: pointer;
+  max-width: 115px;
+  width: 100%;
+  height: 25px;
+  border: 1px solid #1dc17b;
+  border-radius: 3px;
+  padding: 0 8px;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  box-sizing: border-box; 
+  background-image: url('img/arrow-select.svg');
+  background-size: 10px;
+  background-repeat: no-repeat;
+  background-position: 93% 57%;
+  /* color: #a1a1a1; */
+}
+.view__select::-ms-expand { display: none; } 
+
+.view__select option { font-weight:normal; cursor: pointer; } 
+*[dir="rtl"] .view__select, :root:lang(ar) .view__select, :root:lang(iw) .view__select { 
+background-position: left .7em top 50%, 0 0; 
+padding: .6em .8em .5em 1.4em; 
+}
+
 
 .products-catalog .inner {
   display: flex;
