--- a/style.css
+++ b/style.css
@@ -1038,6 +1038,108 @@ body.compensate-for-scrollbar {
   margin-bottom: 20px;
 }
 
+/* Меню поиска */
+.preSearchWrap {
+  display: none;
+  position: absolute;
+  left: 0;
+  top: 43px;
+  width: 96%;
+  max-height: 400px;
+  padding: 2%;
+  border: 1px solid #e0e1e3;
+  border-radius: 0;
+  background-color: white;
+  z-index: 100000;
+  overflow: auto;
+}
+.preSearchWrap::-webkit-scrollbar-thumb {
+  background-color: #1dc17b;
+}
+
+.preSearchWrap::-webkit-scrollbar-button  {
+  display: none;
+}
+
+.preSearchWrap::-webkit-scrollbar {
+  overflow-y: scroll;
+  width: 7px;
+  background-color: #f9f9fd;
+  z-index: 0;
+}
+
+.preSearchElem {
+  display: flex;
+  width: 100%;
+  min-height: 70px;
+  margin-bottom: 15px;
+}
+.preSearchElem .img {
+  width: 70px;
+  max-width: 70px;
+  height: 70px;
+  max-height: 70px;
+  flex: 1;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.preSearchElem .text {
+  display: flex;
+  flex: 3;
+}
+.preSearchElem .text span {
+  margin: auto 10px;
+}
+.preSearchElem .price {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  max-width: 100px;
+}
+.preSearchElem .price .cur {
+  width: 100%;
+  color: black;
+  margin: auto;
+}
+
+.sub-sclose {
+  display: none;
+  cursor: pointer;
+}
+.sub-sclose:after {
+  content: "";
+  position: absolute;
+  top: 10px;
+  right: 45px;
+  background-size: cover;
+  width: 20px;
+  height: 20px;
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  background-image: url(img/icon/sclose.svg); 
+
+}
+
+.sub-load {
+  display: none;
+}
+
+.sub-load:after {
+  content: "";
+  position: absolute;
+  top: 3px;
+  right: 60px;
+  background-size: cover;
+  width: 30px;
+  height: 30px;
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  background-image: url(img/icon/loader.svg); 
+}
+/* Меню поиска END */
+
+
 @media (max-width: 600px) {
   .bascet_page_table .name {
     padding-left: 10px;
